# marymagalene

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  BUILD_SETUP.md  GIT_SETUP_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY_PLAN.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: backend-tests.yml  desktop-build.yml
desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src/styles/: index.css
docs/api/: README.md
docs/developer/: README.md
docs/user-guides/: README.md
native/: CMakeLists.txt
native/crypto-accelerator/: CMakeLists.txt
native/filesystem/: CMakeLists.txt
native/image-processor/: CMakeLists.txt
native/video-transcoder/: CMakeLists.txt
scripts/: build-all.sh  create-all-configs.ps1  create-service-configs.ps1  setup-directories.ps1  test-all.sh
services/ai-orchestrator/: build.gradle
services/analytics/: build.gradle
services/auth/: Cargo.toml
services/crm/: build.gradle
services/gateway/: Cargo.toml
services/integration-hub/: build.gradle.kts
services/mcp-server/: package.json  tsconfig.json
services/payment/: Cargo.toml
services/websocket/: package.json
shared/types/: index.ts  package.json  tsconfig.json
shared/types/api/: index.ts
shared/types/models/: index.ts
