[package]
name = "mary-auth"
version = "1.0.0"
edition = "2021"
authors = ["Mary Platform Team"]

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
totp-lite = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true