[package]
name = "mary-gateway"
version = "1.0.0"
edition = "2021"
authors = ["Mary Platform Team"]

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
jsonwebtoken = "9.2"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true